@@ -21,6 +21,8 @@ AV2 Changelog :: version a4.0
 * Chi bar is semitransparent (configurable in cosmetic.yml)
 * More realistic water-skate movement; can control with wasd
 * Water skating is quieter
+* Refactored networking code to be simpler & more secure
+* Refactored controls code to be simpler
 
 > Fix airblade weird angles
 > Fix flamethrower not aggroing mobs
@@ -28,6 +30,7 @@ AV2 Changelog :: version a4.0
 > Fix grass path not bendable
 > Fix water arc breaking when hit a block while under player control
 > Fix airjump and other status controls can be activated while in chat or other GUIs
+> Allow rebinding of jump key on airjump
 
 - Removed progression points
 - Internal: removed bending states
